fixed breaking of leg. div on collapse

--- a/src/styles/components/legislators.scss
+++ b/src/styles/components/legislators.scss
@@ -23,7 +23,7 @@
                 float: left;
                 background: $light-blue;
                 padding: $padding 0;
-                width: 24.86%;
+                width: 24.8%;
                 text-align: center;
                 border-right: 1px solid $blue;
                 color: $blue;
